--- a/proj4/index.html
+++ b/proj4/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 <link href="assets/images/diamond.png" rel="icon" />
-<title>Project 3-1</title>
+<title>Project 4</title>
 <meta name="description" content="184 Project 4 Writeup">
 <meta name="author" content="harnishdesign.net">
 
